Updated Success Evaluation and Target Audience  information.

--- a/plan.html
+++ b/plan.html
@@ -17,12 +17,13 @@
 <h2>Goals</h2>
 <p>...</p>
 <h2>Success Evaluation</h2>
-<p> ...</p>
+<p> The success of the page will be evaluated by three success criteria ; donations, members joining and event attendance.</p>
 <h2>Target Audience</h2>
-<p>...</p>
+<p>The targeted audience for the website will be people between  the ages of 15-25 years old.</p>
+<p>We will design a page that is basic but interactive. Example - Hovering over a picture reveals more information.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p>... </p>
 <h2>GitHub Repository</h2>
 <p><a href="https://github.com/TomStanley95/CP1406-A2-T1"> CP1406--T1</a></p>
 </body>
-</html
+</html>
