Edited the goal section from "XXX" to barrier reef orchestra

--- a/plan.html
+++ b/plan.html
@@ -15,7 +15,7 @@
 <p><h2>Group Members</h2> <br>
 <strong>Braydon Luther, Tom Stanley,  Thomas Uren</strong> </p>
 <h2>Goals</h2>
-<p>The goal of the webpage is to interact with members of the community and to show them what the XXX is all about. The webpage is designed to attract more people into the group and to increase donations as well as attendence at events that will be held through the year. The webpage will also tell users that there is a membership option if they wish to get some exclusive deals.</p>
+<p>The goal of the webpage is to interact with members of the community and to show them what the Barrier Reef Orchestra is all about. The webpage is designed to attract more people into the group and to increase donations as well as attendence at events that will be held through the year. The webpage will also tell users that there is a membership option if they wish to get some exclusive deals.</p>
 <h2>Success Evaluation</h2>
 <p> The success of the page will be evaluated by three success criteria ; donations, members joining and event attendance.</p>
 <h2>Target Audience</h2>
