added content and finished finished some styling

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
     fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<header><img class="img-circle" src="images/logogreenbackground.png" alt="Logo"/>
+<header><img class="img-circle" src="images/logo.jpg" alt="Logo"/>
     <h1> Barrier Reef Orchestra</h1>
 </header>
 <section>
     <h1>About Us</h1>
-    <p>AboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAbout
-        UsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUsAboutUs</p>
+    <p>We are a community orchestra, drawing players from a large cross section of the Townsville
+        community and sometimes beyond. All are drawn together by their great love of orchestral music
+        and desire to provide North Queensland with quality performances. Depending on the program up to
+        50 musicians play a wide ranging repertoire which has included some of the great orchestral compositions
+        such as the New World Symphony by Dvorak and most of the Beethoven symphonies as well as Tchaikovsky and Bizet.</p>
 
 </section>
 <div class="pagebreak"></div>
@@ -29,7 +32,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="general.html">
             <figure class="bubble_image">
-                <img alt="General Information" src="">
+                <img alt="General Information" src="images/icon_2.jpg">
             </figure>
             <span>General Information</span>
         </a>
@@ -37,7 +40,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="people.html">
             <figure class="bubble_image">
-                <img alt="People" src="">
+                <img alt="People" src="images/icon_1.jpg">
             </figure>
             <span>People</span>
         </a>
@@ -45,7 +48,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="events.html">
             <figure class="bubble_image">
-                <img alt="Events" src="">
+                <img alt="Events" src="images/icon_3.jpg">
             </figure>
             <span>Events/Concerts</span>
         </a>
@@ -53,7 +56,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="gallery.html">
             <figure class="bubble_image">
-                <img alt="Photo Gallery" src="">
+                <img alt="Photo Gallery" src="images/icon_4.jpg">
             </figure>
             <span>Photo Gallery</span>
         </a>
