Updating plan.html

--- a/plan.html
+++ b/plan.html
@@ -15,14 +15,18 @@
 <p><h2>Group Members</h2> <br>
 <strong>Braydon Luther, Tom Stanley,  Thomas Uren</strong> </p>
 <h2>Goals</h2>
-<p>The goal of the webpage is to interact with members of the community and to show them what the Barrier Reef Orchestra is all about. The webpage is designed to attract more people into the group and to increase donations as well as attendence at events that will be held through the year. The webpage will also tell users that there is a membership option if they wish to get some exclusive deals.</p>
+<p>The goal of the website will be to bring the Barrier Reef Orchestra into the modern world, by doing this
+we hope to appeal to a younger audience and increase revenue for the client.
+</p>
 <h2>Success Evaluation</h2>
-<p> The success of the page will be evaluated by three success criteria ; donations, members joining and event attendance.</p>
+<p> The success of the page will be evaluated by three success criteria
+  ; donations, members joining and event attendance.
+</p>
 <h2>Target Audience</h2>
 <p>The targeted audience for the website will be people between  the ages of 15-25 years old.</p>
-<p>We will design a page that is basic but interactive. Example - Hovering over a picture reveals more information.</p>
+<p>We will design our website so that is basic but interactive. Example - Hovering over a picture reveals more information.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p> <img src="sitemap.png"> </p>
+<p> <img src="images/sitemap.png"> </p>
 <h2>Project Links:</h2>
 CP1406--T1
 <br><p><a href="https://github.com/TomStanley95/CP1406-A2-T1">Github</a>
