--- a/plan.html
+++ b/plan.html
@@ -33,4 +33,5 @@ CP1406--T1
 <br><a href="https://trello.com/b/nDBOFOCP/web-project">Trello</a>
 <br><a href="https://itatjcu.slack.com/messages/cp1406a2team1/">Slack Group</a></p>
 </body>
+<footer></footer>
 </html>
