--- a/photogallery.html
+++ b/photogallery.html
@@ -19,13 +19,159 @@
 <p>Please enjoy the lovely photots somebody took...</p>
 
 
+
+
+<div class="clearfix"></div>
+<div style="padding:6px;">
+
+<div class="responsive">
+  <div class="img">
 <a href="#img1">
-  <img src="img/image1.jpg" width="382" height="216">
+  <img src="img/image1.jpg" width="382" height="auto">
 </a>
-
-
 <a href="#_" class="lightbox" id="img1">
   <img src="img/image1.jpg">
 </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img2">
+  <img src="img/image2.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img2">
+  <img src="img/image2.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img3">
+  <img src="img/image3.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img3">
+  <img src="img/image3.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img4">
+  <img src="img/image4.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img4">
+  <img src="img/image4.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+<div style="padding:6px;">
+
+<div class="responsive">
+  <div class="img">
+<a href="#img5">
+  <img src="img/image5.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img5">
+  <img src="img/image5.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img6">
+  <img src="img/image6.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img6">
+  <img src="img/image6.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+<a href="#img7">
+  <img src="img/image7.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img7">
+  <img src="img/image7.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img8">
+  <img src="img/image8.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img8">
+  <img src="img/image8.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+<div style="padding:6px;">
+
+<div class="responsive">
+  <div class="img">
+ <a href="#imgX">
+  <img src="img/imageX.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="imgX">
+  <img src="img/imageX.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#imgX">
+  <img src="img/imageX.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="imgX">
+  <img src="img/imageX.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#imgX">
+  <img src="img/imageX.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="imgX">
+  <img src="img/imageX.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#imgX">
+  <img src="img/imageX.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="imgX">
+  <img src="img/imageX.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
 
 </html>
