--- a/home.html
+++ b/home.html
@@ -3,20 +3,18 @@
 <link href="main.css" rel="stylesheet" type="text/css">
 <title>TCS</title>
 <ul>
-  <li><a href="home.html">Home</a></li>
+  <li><a class="active" href="home.html">Home</a></li>
   <li><a href="news.asp">Our People</a></li>
   <li><a href="#about">Events/Concerts</a></li>
   <li><a href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-  <li><ph> Contact Us</ph></li>
-  <li style="float:right" ><a class="active" href="contactus.html">Contact Us</a></li>
+  <li><ph> Home</ph></li>
+  <li style="float:right" ><a href="contactus.html">Contact Us</a></li>
 
 </ul>
 <br>
 
 <h1> Who are we? </h1>
-
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
 <p>The Barrier Reef Orchestra - A North Queensland Icon</p>
 
