--- a/photogallery.html
+++ b/photogallery.html
@@ -22,7 +22,7 @@
 
 
 <div class="clearfix"></div>
-<div style="padding:6px;">
+<div style="padding:6px;"></div>
 
 <div class="responsive">
   <div class="img">
@@ -73,7 +73,7 @@
 </div>
 
 <div class="clearfix"></div>
-<div style="padding:6px;">
+<div style="padding:6px;"></div>
 
 <div class="responsive">
   <div class="img">
@@ -124,15 +124,15 @@
 </div>
 
 <div class="clearfix"></div>
-<div style="padding:6px;">
+<div style="padding:6px;"></div>
 
 <div class="responsive">
   <div class="img">
- <a href="#imgX">
-  <img src="img/imageX.jpg" width="382" height="auto">
+ <a href="#img9">
+  <img src="img/image9.jpg" width="382" height="auto">
 </a>
-<a href="#_" class="lightbox" id="imgX">
-  <img src="img/imageX.jpg">
+<a href="#_" class="lightbox" id="img9">
+  <img src="img/image9.jpg">
 </a>
     <div class="desc">Add a description of the image here</div>
   </div>
@@ -140,23 +140,11 @@
 
 <div class="responsive">
   <div class="img">
- <a href="#imgX">
-  <img src="img/imageX.jpg" width="382" height="auto">
+ <a href="#img10">
+  <img src="img/image10.jpg" width="382" height="auto">
 </a>
-<a href="#_" class="lightbox" id="imgX">
-  <img src="img/imageX.jpg">
-</a>
-    <div class="desc">Add a description of the image here</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="img">
- <a href="#imgX">
-  <img src="img/imageX.jpg" width="382" height="auto">
-</a>
-<a href="#_" class="lightbox" id="imgX">
-  <img src="img/imageX.jpg">
+<a href="#_" class="lightbox" id="img10">
+  <img src="img/image10.jpg">
 </a>
     <div class="desc">Add a description of the image here</div>
   </div>
@@ -164,14 +152,129 @@
 
 <div class="responsive">
   <div class="img">
- <a href="#imgX">
-  <img src="img/imageX.jpg" width="382" height="auto">
+ <a href="#img11">
+  <img src="img/image11.jpg" width="382" height="auto">
 </a>
-<a href="#_" class="lightbox" id="imgX">
-  <img src="img/imageX.jpg">
+<a href="#_" class="lightbox" id="img11">
+  <img src="img/image11.jpg">
 </a>
     <div class="desc">Add a description of the image here</div>
   </div>
 </div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img12">
+  <img src="img/image12.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img12">
+  <img src="img/image12.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+<div style="padding:6px;"></div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img13">
+  <img src="img/image13.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img13">
+  <img src="img/image13.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img14">
+  <img src="img/image14.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img14">
+  <img src="img/image14.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img15">
+  <img src="img/image15.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img15">
+  <img src="img/image15.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img16">
+  <img src="img/image16.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img16">
+  <img src="img/image16.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+<div style="padding:6px;"></div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img17">
+  <img src="img/image17.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img17">
+  <img src="img/image17.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img18">
+  <img src="img/image18.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img18">
+  <img src="img/image18.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img19">
+  <img src="img/image19.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img19">
+  <img src="img/image19.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="img">
+ <a href="#img20">
+  <img src="img/image20.jpg" width="382" height="auto">
+</a>
+<a href="#_" class="lightbox" id="img20">
+  <img src="img/image20.jpg">
+</a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
 
 </html>
