--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
 
 </ul>
 <br>
-
+<div id="main">
 <h1> Who are we? </h1>
 
 <p>The Barrier Reef Orchestra - A North Queensland Icon</p>
 
 <p>The Barrier Reef Orchestra was formed in Townsville in 2000 after a workshop conducted by Richard McIntyre from Canberra. Over the past 15 years it has gone from strength to strength and now presents three main concerts a year, as well as smaller concerts such as the children's concert Peter and the Wolf in 2014. We are a community orchestra, drawing players from a large cross section of the Townsville community and sometimes beyond. All are drawn together by their great love of orchestral music and desire to provide North Queensland with quality performances. Depending on the program up to 50 musicians play a wide ranging repertoire which has included some of the great orchestral compositions such as the New World Symphony by Dvorak and most of the Beethoven symphonies as well as Tchaikovsky and Bizet. </p>
-
+<img src="img/image21.jpg" width="382" height="auto" align="right">
 <p>An outstanding performance of Beethoven's 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe's Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra's willingness to embrace mainstream classical repertoire as well as opportunities for collaboration. </p>
 
 <p>An outstanding performance of Beethoven's 9th Symphony presented to a sell-out audience, won the Townsville City Council Arts Award for best musical production in 2011. This was recently followed by performing Peter Sculthorphe's Mangroves, a collaboration with audio-visual artists, performing on ABC radio and at Umbrella Studios. Another recent highlight was playing with James Morrison for the second time to present Latin Fiesta, which was originally done with the Western Australian Orchestra. 
@@ -32,6 +32,6 @@
 </p>
 
 <p>We are also pleased to be part of the Townsville 150 Concert where we will share the stage with the likes of David Campbell, Luke Kennedy, Bronwyn Douglas and the 1 RAR Band just to name a few of the guests. We will be back to Queens Gardens for a repeat performance as part of AFCM due to the huge popularity of last year's concert.</p>
-
+</div>
 
 </html>
