--- a/photogallery.html
+++ b/photogallery.html
@@ -13,7 +13,7 @@
 
 </ul>
 <br>
-
+<div id="main">
 <h1>  </h1>
 
 <p>Please enjoy the lovely photots somebody took...</p>
@@ -277,4 +277,4 @@
 </div>
 
 
-</html>
+</div></html>
