--- a/home.html
+++ b/home.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <link href="main.css" rel="stylesheet" type="text/css">
-<title>TCS</title>
+<title>BRO Home</title>
 <ul>
   <li><a class="active" href="home.html">Home</a></li>
   <li><a href="news.asp">Our People</a></li>
   <li><a href="#about">Events/Concerts</a></li>
   <li><a href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-  <li><ph> Home</ph></li>
+
   <li style="float:right" ><a href="contactus.html">Contact Us</a></li>
 
 </ul>
