--- a/contactus.html
+++ b/contactus.html
@@ -1,39 +1,64 @@
 <!doctype html>
 <html>
 <link href="main.css" rel="stylesheet" type="text/css">
-<title>TCS</title>
+<title>Contact BRO</title>
 <ul>
   <li><a href="home.html">Home</a></li>
   <li><a href="news.asp">Our People</a></li>
   <li><a href="#about">Events/Concerts</a></li>
   <li><a href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-  <li><ph> Contact Us</ph></li>
+
   <li style="float:right" ><a class="active" href="contactus.html">Contact Us</a></li>
 
 </ul>
 <br>
 <div id="main">
-<h1> Who are we? </h1>
+<h1> Want to donate? </h1>
+<p> The North Queensland Ensembles Inc is a tax deductible fund listed on the Register of Cultural Organisations under Subdivision 30-B of the Income tax Assessment Act 1997. Donations of $2.00 or more are tax deductible.</p>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" align="right"></iframe>
 
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+<!-- Replaced in favour of a PHP style system.
+<p>If you want to send us an email. <a href="mailto:testuser@my.jcu.edu.au">Click here!</a></p>-->
 
-<p>The Barrier Reef Orchestra - A North Queensland Icon</p>
 
-<p>The Barrier Reef Orchestra was formed in Townsville in 2000 after a workshop conducted by Richard McIntyre from Canberra. Over the past 15 years it has gone from strength to strength and now presents three main concerts a year, as well as smaller concerts such as the children's concert Peter and the Wolf in 2014. We are a community orchestra, drawing players from a large cross section of the Townsville community and sometimes beyond. All are drawn together by their great love of orchestral music and desire to provide North Queensland with quality performances. Depending on the program up to 50 musicians play a wide ranging repertoire which has included some of the great orchestral compositions such as the New World Symphony by Dvorak and most of the Beethoven symphonies as well as Tchaikovsky and Bizet. </p>
+<h2> Have a question for us? Ask us below!</h2>
+<!-- Emailing requires server. Don't know how to test. Probably doesn't work.-->
+ <form name="contactform" method="post" action="send_form_email.php">
+<table width="450px">
+<tr>
+ <td valign="top">
+  <label for="first_name">Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+</tr>
+<tr>
+ <td colspan="2" style="text-align:left">
+  <input type="submit" value="Submit">
+ </td>
+</tr>
+</table>
+</form>
 
-<p>An outstanding performance of Beethoven's 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe's Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra's willingness to embrace mainstream classical repertoire as well as opportunities for collaboration. </p>
 
-<p>An outstanding performance of Beethoven's 9th Symphony presented to a sell-out audience, won the Townsville City Council Arts Award for best musical production in 2011. This was recently followed by performing Peter Sculthorphe's Mangroves, a collaboration with audio-visual artists, performing on ABC radio and at Umbrella Studios. Another recent highlight was playing with James Morrison for the second time to present Latin Fiesta, which was originally done with the Western Australian Orchestra. 
-</p>
-
-<p>In 2015 the orchestra was invited to perform in three festivals, joining with the AFCM to present a free public concert in Queens Garden the 1812!; Dancenorth at Jezzine Barracks for Twilight and featured in World Music as part of the Townsville Civic Theatre music season. This was a first for the orchestra - underscoring its value to the community and highlighting its continued prominence in the cultural soundscape of North Queensland. 
-</p>
-
-<p>Now to 2016 which is going to be a stellar year for your Orchestra. Already we have our three major concerts which will include opera, featuring Paul Tabone born in Ingham, but now working the international stage as a tenor based in Italy. Rachmaninov's Piano Concerto No.2 featuring last year's winner of the instrumental section of the ACVC, Arthur Athan. Our opening performance titled Dreams and Dances is sure to have some favourites such as Afternoon of a Fawn by Debussy. 
-</p>
-
-<p>We are also pleased to be part of the Townsville 150 Concert where we will share the stage with the likes of David Campbell, Luke Kennedy, Bronwyn Douglas and the 1 RAR Band just to name a few of the guests. We will be back to Queens Gardens for a repeat performance as part of AFCM due to the huge popularity of last year's concert.</p>
 
 </div>
 </html>
