--- a/photogallery.html
+++ b/photogallery.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <link href="main.css" rel="stylesheet" type="text/css">
-
+<title> BRO Photo Gallery</title>
 <ul>
   <li><a href="home.html">Home</a></li>
   <li><a href="news.asp">Our People</a></li>
   <li><a href="#about">Events/Concerts</a></li>
   <li><a class="active" href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-  <li><ph> Photo Gallery</ph></li>
+
   <li style="float:right" ><a href="contactus.html">Contact Us</a></li>
 
 </ul>
@@ -32,7 +32,7 @@
 <a href="#_" class="lightbox" id="img1">
   <img src="img/image1.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -44,7 +44,7 @@
 <a href="#_" class="lightbox" id="img2">
   <img src="img/image2.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -56,7 +56,7 @@
 <a href="#_" class="lightbox" id="img3">
   <img src="img/image3.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -68,7 +68,7 @@
 <a href="#_" class="lightbox" id="img4">
   <img src="img/image4.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -83,7 +83,7 @@
 <a href="#_" class="lightbox" id="img5">
   <img src="img/image5.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -95,7 +95,7 @@
 <a href="#_" class="lightbox" id="img6">
   <img src="img/image6.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -107,7 +107,7 @@
 <a href="#_" class="lightbox" id="img7">
   <img src="img/image7.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -119,7 +119,7 @@
 <a href="#_" class="lightbox" id="img8">
   <img src="img/image8.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -134,7 +134,7 @@
 <a href="#_" class="lightbox" id="img9">
   <img src="img/image9.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -146,7 +146,7 @@
 <a href="#_" class="lightbox" id="img10">
   <img src="img/image10.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -158,7 +158,7 @@
 <a href="#_" class="lightbox" id="img11">
   <img src="img/image11.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -170,7 +170,7 @@
 <a href="#_" class="lightbox" id="img12">
   <img src="img/image12.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -185,7 +185,7 @@
 <a href="#_" class="lightbox" id="img13">
   <img src="img/image13.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -197,7 +197,7 @@
 <a href="#_" class="lightbox" id="img14">
   <img src="img/image14.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -209,7 +209,7 @@
 <a href="#_" class="lightbox" id="img15">
   <img src="img/image15.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -221,7 +221,7 @@
 <a href="#_" class="lightbox" id="img16">
   <img src="img/image16.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -236,7 +236,7 @@
 <a href="#_" class="lightbox" id="img17">
   <img src="img/image17.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -248,7 +248,7 @@
 <a href="#_" class="lightbox" id="img18">
   <img src="img/image18.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -260,7 +260,7 @@
 <a href="#_" class="lightbox" id="img19">
   <img src="img/image19.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
@@ -272,7 +272,7 @@
 <a href="#_" class="lightbox" id="img20">
   <img src="img/image20.jpg">
 </a>
-    <div class="desc">Add a description of the image here</div>
+    <!--<div class="desc">Add a description of the image here</div>-->
   </div>
 </div>
 
