Upload. Still some work to do on general, might add a sidebar for sponsors.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Barrier Reef Orchestra</title>
-    <link rel="stylesheet" type="text/css" href="mainstlyles.css"/>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -14,7 +14,7 @@
     js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
     fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<header><img class="img-circle" src="images/logo.jpg" alt="Logo"/>
+<header><img class="img-circle" src="img/logo.jpg" alt="Logo"/>
     <h1> Barrier Reef Orchestra</h1>
 </header>
 <section>
@@ -32,7 +32,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="general.html">
             <figure class="bubble_image">
-                <img alt="General Information" src="images/icon_2.jpg">
+                <img alt="General Information" src="img/icon_2.jpg">
             </figure>
             <span>General Information</span>
         </a>
@@ -40,7 +40,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="people.html">
             <figure class="bubble_image">
-                <img alt="People" src="images/icon_1.jpg">
+                <img alt="People" src="img/icon_1.jpg">
             </figure>
             <span>People</span>
         </a>
@@ -48,7 +48,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="events.html">
             <figure class="bubble_image">
-                <img alt="Events" src="images/icon_3.jpg">
+                <img alt="Events" src="img/icon_3.jpg">
             </figure>
             <span>Events/Concerts</span>
         </a>
@@ -56,7 +56,7 @@
     <li class="bubble_slide">
         <a class="bubble_profile" href="gallery.html">
             <figure class="bubble_image">
-                <img alt="Photo Gallery" src="images/icon_4.jpg">
+                <img alt="Photo Gallery" src="img/icon_4.jpg">
             </figure>
             <span>Photo Gallery</span>
         </a>
