--- a/test.html
+++ b/test.html
@@ -5,6 +5,98 @@
     <title>Title</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<header><img class="img-circle" src="img/logo.jpg" alt="Logo"/>
+    <h1> Barrier Reef Orchestra</h1>
+</header>
+<nav>
+    <ul class="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li class="current"><a href="general.html">General Information</a> </li>
+        <li><a href="people.html">People</a></li>
+        <li><a href="events.html">Events and Concerts</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+</nav>
+<div class="news">
+    <section>
+        <h1>News</h1>
+        <p>&nbsp;</p>
+        <h2>World Music Concert</h2>
+        <p>&nbsp;</p>
+        <p>As you travel the globe one of the standout features of so many different
+            countries is undoubtedly their music. This concert saves on the shoe leather
+            and brings an eclectic mix of music from all over the world to Townsville.
+            A unique performance conceptualised and developed here in Townsville by
+            the Barrier Reef Orchestra highlighting the stunning diversity of cultural
+            music from around the globe. Featuring the Orchestra and several international
+            artists performing music from Asia, the Americas, the British Isles, Europe and
+            of course Australia. So pack away the passport take the trip of a life time and
+            never leave home. Join Townsville’s very own Barrier Reef Orchestra in their 15th
+            year for a World Music Concert. </p>
+    </section>
+</div>
+<div class="pagebreak"></div>
+<div class="history">
+    <section>
+        <h1>History</h1>
+        <div class="lefttext">
+            <p>&nbsp;</p>
+            <h2>2007</h2>
+            <p>&nbsp;</p>
 
+            <p>In 2007 BRO performed the Beethoven Triple Concerto with visiting Seraphim Trio from Melbourne.
+                The orchestra repeated the concert in Cairns with no Cyclone Larry this time!
+                A string ensemble drawn from the larger orchestra was invited by Piers Lane
+                the new Director of the AFCM, to perform for the first time in the Australian
+                Festival of Chamber Music, accompanying Australian Opera Baritone Peter Coleman-Wright,a very successful concert.
+                The Governor of Queensland became the patron of the Orchestra joining the founding patron Professor
+                John Hopkins to inspire the further development of the orchestra and the year culminated in a sell out
+                concert featuring James Morrison, conductor Sean O"Boyle, jazz vocalist Emma Pask and a collaboration
+                with Townsville Brass and the rythym section from the amazing 1 RAR Band. The event of the year! </p>
+        </div>
+        <div class="righttext">
+            <p>&nbsp;</p>
+            <h2>2009</h2>
+            <p>&nbsp;</p>
+            <p>2009 was a year of highs and lows for the Barrier Reef Orchestra.Our first concert in March was conducted
+                by Richard McIntyre but we had pre-concert drama as our soloist had to retire due to injury. We fortunately
+                were able to get Marcus Stocker at the last minute to play the Dvorak concerto. The program of Dvorak and
+                Sibelius challenged the orchestra but the challenge and drama became greater due to the failure of the airconditioning at Riverway.
+                With the venue getting hotter and hotter during rehearsal we had to decide whether to go ahead or cancel
+                the event. We decided to go ahead and most of our loyal audience stayed with us but it was hard going. Rick who is from cold Canberra certainly got a feel of the tropics that night as did everyone that attended.
+                Our mid year concert had to be cancelled due to the majority of the orchestra going away for a music camp.
+                Very few cities the size of Townsville attempt to produce an orchestra and while Townsville is musically
+                very strong we certainly stretched the music fraternity too far at that time.
+                Our October concert was to feature Ji Won Kim who had won the previous Australian Vocal and Concerto
+                Competition here in Townsville. However, her blossoming career had her overseas at the time, and made
+                her unavailable for that concert. She has since gone on to win the ABC’s Young Performer of the Year Award. We now look forward to hearing her play in our next concert in March 2010.
+                Our guest conductor Sean O’Boyle knew the perfect singers to do a “Last Night at the Proms” concert.
+                This concert was a great success! It featured the Townsville Oratorio Choir, the full orchestra, Sean O’Boyle
+                conducting and also included guest piper, Ray Sutton, guest tenor, Gregory Moore and Canadian soprano,
+                Suzanne Kompass at the Civic Theatre. </p>
+        </div>
+    </section>
+</div>
+<div class="contact_box">
+    <div class="contact">
+        <p><h4>Contact Us:</h4></p>
+        <p>Phone:</p>
+        <p>Address:</p>
+        <p>Email:</p>
+    </div>
+    <div class="facebook_box">
+        <p>Like us On facebook</p>
+        <div class="fb-like" data-href="https://www.facebook.com/nqorchestra" data-layout="standard" data-action="like" data-show-faces="true" data-share="false">
+        </div>
+    </div>
+</div>
 </body>
 </html>
