--- a/plan.html
+++ b/plan.html
@@ -26,7 +26,7 @@ we hope to appeal to a younger audience and increase revenue for the client.
 <p>The targeted audience for the website will be people between  the ages of 15-25 years old.</p>
 <p>We will design our website so that is basic but interactive. Example - Hovering over a picture reveals more information.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p> <img src="images/sitemap.png"> </p>
+<p> <img src="img/sitemap.png"> </p>
 <h2>Project Links:</h2>
 CP1406--T1
 <br><p><a href="https://github.com/TomStanley95/CP1406-A2-T1">Github</a>
