--- a/contactus.html
+++ b/contactus.html
@@ -8,23 +8,23 @@
   <li><a href="#about">Events/Concerts</a></li>
   <li><a href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-
+  <!--<li><ph>Contact Us</ph></li>-->
   <li style="float:right" ><a class="active" href="contactus.html">Contact Us</a></li>
 
 </ul>
 <br>
 <div id="main">
 <h1> Want to donate? </h1>
-<p> The North Queensland Ensembles Inc is a tax deductible fund listed on the Register of Cultural Organisations under Subdivision 30-B of the Income tax Assessment Act 1997. Donations of $2.00 or more are tax deductible.</p>
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" align="right"></iframe>
+<p>Feel free to donate to the Barrier Reef Orchastra to help support us do what we do! <b1>The North Queensland Ensembles Inc is a tax deductible fund listed on the Register of Cultural Organisations under Subdivision 30-B of the Income tax Assessment Act 1997. Donations of $2.00 or more are tax deductible.</b1></p>
+<h3 align="right"> Like us on Facebook!</h3><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" align="right"></iframe>
 
 <!-- Replaced in favour of a PHP style system.
 <p>If you want to send us an email. <a href="mailto:testuser@my.jcu.edu.au">Click here!</a></p>-->
 
-
 <h2> Have a question for us? Ask us below!</h2>
+
 <!-- Emailing requires server. Don't know how to test. Probably doesn't work.-->
- <form name="contactform" method="post" action="send_form_email.php">
+<form name="contactform" method="post" action="send_form_email.php">
 <table width="450px">
 <tr>
  <td valign="top">
@@ -39,7 +39,7 @@
   <label for="email">Email Address *</label>
  </td>
  <td valign="top">
-  <input  type="text" name="email" maxlength="80" size="30">
+  <input  type="text" name="email" type="email" maxlength="80" size="30">
  </td>
 </tr>
 <tr>
@@ -57,6 +57,7 @@
 </tr>
 </table>
 </form>
+
 
 
 
