--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <li><a href="#about">Events/Concerts</a></li>
   <li><a href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-
+  <!--<li><ph><br>Home Page</ph></li>-->
   <li style="float:right" ><a href="contactus.html">Contact Us</a></li>
 
 </ul>
