--- a/photogallery.html
+++ b/photogallery.html
@@ -8,7 +8,7 @@
   <li><a href="#about">Events/Concerts</a></li>
   <li><a class="active" href="photogallery.html">Photo Gallery</a></li>
   <li><a href="#about">Forms</a></li>
-
+  <!--<li><ph>Photo GalleryContact Us</ph></li>-->
   <li style="float:right" ><a href="contactus.html">Contact Us</a></li>
 
 </ul>
