--- a/report.html
+++ b/report.html
@@ -35,15 +35,19 @@
 <h2>Goals</h2>
 <p>The goal of the assignment was to create a website for the Barrier Reef Orchastra. This website was to be an upgraded version of the original website (http://www.nqorchestra.com.au/). The website should be able to attract a new audience of youth for participate in the group as well as some donations to keep the group alive. </p>
 <h2>Completed Work by Who</h2>
-<p>brief details of who did what</p>
+<p>Each of the team members were given a webpage to complete. The webpages would then be all put together with a single CSS file used. The team members which did each page is below:</p>
 <ul>
     <li><strong>Braydon Luther: </strong> Our People, Forms</li>
     <li><strong>Tom Stanley: </strong> Events/Concerts, Home Page</li>
     <li><strong>Tom Uren: </strong>Photo Gallery, Contact Us</li>
 </ul>
 <h2>Testing Details</h2>
-<p>any details required to test the site, including instructions if needed, outstanding issues
-    (like things that look as though they work but don't)</p>
+<p><li>Home Page: Works fine except for Events, Forms and People which are not connected to any page.</li>
+	<li>Photo gallery: Suffers from the same as home page. All photos don't have a description, would of liked to have one for each of the photos.</li>
+    <li> Contact Us: suffers from same as home page. Contact form should work, wasn't able to test it. Facebook feed page works fine when tested.</li>
+    <li>People: ???</li>
+    <li>Events: ???</li>
+    <li>Forms: ???</li></p>
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
 <ul>
@@ -52,8 +56,8 @@
 <h2>PMI</h2>
 <p>your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting
     aspects of your teamwork process and result</p>
-<p><strong>Pluses: </strong> ...</p>
-<p><strong>Minuses: </strong> ...</p>
-<p><strong>Interesting: </strong> ...</p>
+<p><strong>Pluses: </strong> The group was able to finish the assignment on time. Communication was good between the group. Ideas were thrown around to help each other do their pages.</p>
+<p><strong>Minuses: </strong> All of the group left the assignment a little late. With only a few weeks to go the assignment was started in an attempt to create a working webpage.</p>
+<p><strong>Interesting: </strong> Each of the team members had their own way of creating a header for the pages they created. The team was able to complete this assignment in the coarse of a few weeks.</p>
 </body>
 </html>
