--- a/events.html
+++ b/events.html
@@ -6,41 +6,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Events/Concerts</title>
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Own style sheet-->
     <link rel="stylesheet" type="text/css" href="main.css"/>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div>
-            <img class="img-circle" src="img/logo.jpg" alt="Logo"/>
-            <h1> Barrier Reef Orchestra</h1>
-        </div>
-        <div class ="container">
-            <ul class="nav nav-pills" style="float: left">
-                <li><a href=index.html>Home</a></li>
-                <li><a href="general.html">General Information</a></li>
-                <li><a href="">People</a></li>
-                <li class="active"><a href=events.html>Events/Concerts</a></li>
-                <li><a href="">Photo Gallery</a></li>
-            </ul>
-            <ul class="nav nav-pills  " style="float: right">
-                <li><a href="">Contact Us</a></li>
-            </ul>
-        </div>
-    </nav>
+<header class="panel-header-home">
+    <div class="header-img-box">
+        <img class="img-circle" src="img/logo.jpg" alt="Logo"/>
+    </div>
+    <div class="header-content-box">
+        <h1>Barrier Reef Orchestra</h1>
+    </div>
+    <div class="nav-box">
+        <nav class="navbar navbar-default navbar-static-top">
+
+            <div class ="container">
+                <ul class="nav nav-pills" style="float: left">
+                    <li><a href=index.html>Home</a></li>
+                    <li ><a href="general.html">General Information</a></li>
+                    <li><a href="">People</a></li>
+                    <li class="active"><a href=events.html>Events</a></li>
+                    <li><a href="">Photo Gallery</a></li>
+                </ul>
+                <ul class="nav nav-pills  " style="float: right">
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </header>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<div class="container">
+    <h1 class="text-center" style="margin: 5% 0 ">Upcoming Events</h1>
+    <div id="events-carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#events-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#events-carousel" data-slide-to="1"></li>
+            <li data-target="#events-carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img  src="img/carousel1.jpg" alt="...">
+                <div class="carousel-caption">
+                    <h1>Twilight Classics</h1>
+                    <p>July 17 5pm</p>
+                    <h2>Performers</h2>
+                    <p>Conductor - Mario Dobering</p>
+                    <p>Athur Athan - Rachmaninov Piano Concerto No.2</p>
+                    <h2>Featuring</h2>
+                    <p>Brahms Symphony No.4</p>
+                    <p>Queens Garden - Written by Dr David Salisbury</p>
+                </div>
+            </div>
+            <div class="item">
+                <img  src="img/carousel2.jpg" alt="...">
+                <div class="carousel-caption">
+                    <h1>Queens Garden Concert - The 1812 again</h1>
+                    <p>July 31 3pm</p>
+                    <h2>Featuring</h2>
+                    <p>Tchaikovsky</p>
+                    <p>1812 Overture Op.49</p>
+                </div>
+            </div>
+            <div class="item">
+                <img  src="img/carousel3.jpg" alt="...">
+                <div class="carousel-caption">
+                    <h1>Barrier Reef Orchestra Goes to the Opera</h1>
+                    <p>October 22 7.30pm</p>
+                    <p>October 29 3pm Ingham Town Hall</p>
+                    <h2>Performers</h2>
+                    <p>Conductor - Craig Johnson</p>
+                    <p>Singer - Paul Tabone</p>
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#events-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#events-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<footer>
+    <div class="panel-footer-fixed">
+        <div class="col-md-2 col-md-offset-1">
+            <img class="img-circle" src="img/logo.jpg">
+        </div>
+        <div class="col-md-4 col-md-offset-1">
+            <ul class="text-center" style="list-style-type: none">
+                <li>
+                    <a class="btn btn-default" href="" role="button">Join Us</a>
+                </li>
+                <li>
+                    <a class="btn btn-default" href="" role="button">Become a benefactor</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-1 col-md-offset-2">
+            <a href="contactus">
+                <img src="img/fblogo.png">
+            </a>
+        </div>
+    </div>
+</footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
