--- a/index.html
+++ b/index.html
@@ -2,33 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Barrier Reef Orchestra</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Own style sheet-->
     <link rel="stylesheet" type="text/css" href="main.css"/>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<header><img class="img-circle" src="img/logo.jpg" alt="Logo"/>
-    <h1> Barrier Reef Orchestra</h1>
+<header class="panel-header-home">
+    <div class="header-img-box">
+        <img class="img-circle" src="img/logo.jpg" alt="Logo"/>
+    </div>
+    <div class="header-content-box">
+        <h1>Barrier Reef Orchestra</h1>
+    </div>
 </header>
-<section>
-    <h1>About Us</h1>
-    <p>We are a community orchestra, drawing players from a large cross section of the Townsville
+
+<div class="container">
+    <div class="col-md-3"></div>
+
+    <div class="col-md-6 about">
+    <h1 class="text-center">About Us</h1>
+    <p class="text-center">We are a community orchestra, drawing players from a large cross section of the Townsville
         community and sometimes beyond. All are drawn together by their great love of orchestral music
         and desire to provide North Queensland with quality performances. Depending on the program up to
         50 musicians play a wide ranging repertoire which has included some of the great orchestral compositions
         such as the New World Symphony by Dvorak and most of the Beethoven symphonies as well as Tchaikovsky and Bizet.</p>
+    </div>
+    </div>
 
-</section>
-<div class="pagebreak"></div>
 <nav>
-<ul class="bubble_nav">
+<ul class="bubble_nav" >
     <li class="bubble_slide">
         <a class="bubble_profile" href="general.html">
             <figure class="bubble_image">
@@ -50,7 +63,7 @@
             <figure class="bubble_image">
                 <img alt="Events" src="img/icon_3.jpg">
             </figure>
-            <span>Events/Concerts</span>
+            <span>Events</span>
         </a>
     </li>
     <li class="bubble_slide">
@@ -61,20 +74,41 @@
             <span>Photo Gallery</span>
         </a>
     </li>
+    <li class="bubble_slide">
+        <a class="bubble_profile" href="people.html">
+            <figure class="bubble_image">
+                <img alt="People" src="img/icon_1.jpg">
+            </figure>
+            <span>Contact Us</span>
+        </a>
+    </li>
 </ul>
 </nav>
-<div class="contact_box">
-<div class="contact">
-    <p><h4>Contact Us:</h4></p>
-    <p>Phone:</p>
-    <p>Address:</p>
-    <p>Email:</p>
-</div>
-    <div class="facebook_box">
-        <p>Like us On facebook</p>
-    <div class="fb-like" data-href="https://www.facebook.com/nqorchestra" data-layout="standard" data-action="like" data-show-faces="true" data-share="false">
+<footer>
+    <div class="panel-footer-fixed" >
+        <div class="col-md-2 col-md-offset-1">
+            <img  class="img-circle" src="img/logo.jpg">
+        </div>
+        <div class="col-md-4 col-md-offset-1">
+            <ul class="text-center" style="list-style-type: none">
+                <li>
+                    <a class="btn btn-default" href="" role="button">Join Us</a>
+                </li>
+                <li>
+                    <a class="btn btn-default" href="" role="button">Become a benefactor</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-1 col-md-offset-2">
+            <a href="contactus">
+                <img src="img/fblogo.png">
+            </a>
+        </div>
     </div>
-    </div>
-</div>
+</footer>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
